// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders at fullWidth 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Full Width Button
    </span>
  </span>
</button>
`;

exports[`renders when disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  opacity: 0.5;
  pointer-events: none;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={true}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={-1}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Disabled Button
    </span>
  </span>
</button>
`;

exports[`renders with a when href is present 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<a
  className="c0"
  disabled={false}
  href="https://ifixit.com"
  onClick={[Function]}
  size="medium"
  tabIndex={0}
  target="_blank"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Go to iFixit.com
    </span>
  </span>
</a>
`;

exports[`renders with default design 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Default Button
    </span>
  </span>
</button>
`;

exports[`renders with large size 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 16px 24px;
  font-size: 16px;
  line-height: 1.25;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="large"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Large Button
    </span>
  </span>
</button>
`;

exports[`renders with outline design 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #0071CE;
  background-color: transparent;
  border-color: #0071CE;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #0071CE;
  border-color: #0071CE;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,113,206,0.32);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Outline Button
    </span>
  </span>
</button>
`;

exports[`renders with plain design 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: transparent;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  color: #0071CE;
}

.c0:focus {
  background-color: rgba(0,3,6,0.04);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Plain Button
    </span>
  </span>
</button>
`;

exports[`renders with primary design 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #FFFFFF;
  background-color: #0071CE;
  border-color: #0071CE;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  color: #FFFFFF;
  background-color: #005091;
  border-color: #005091;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,113,206,0.32);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Primary Button
    </span>
  </span>
</button>
`;

exports[`renders with secondary design 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.26);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.26);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Secondary Button
    </span>
  </span>
</button>
`;

exports[`renders with small size 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 4px 12px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="small"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Small Button
    </span>
  </span>
</button>
`;

exports[`renders without crashing 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<button
  className="c0"
  disabled={false}
  href=""
  onClick={[Function]}
  size="medium"
  tabIndex={0}
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Test Button
    </span>
  </span>
</button>
`;
